# crx-strategies

./: CHANGELOG.md  LLM.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
coinrule_x_strategies/: __init__.py  core.py  registry.yaml  validation.py
coinrule_x_strategies/strategies/bounce_recovery/: README.md  registry.yaml  strategy.py  test_bounce_recovery.py
coinrule_x_strategies/strategies/dual_momentum/: README.md  __init__.py  registry.yaml  strategy.py  test_dual_momentum.py
coinrule_x_strategies/strategies/trend_rider/: README.md  registry.yaml  strategy.py  test_trend_rider.py
coinrule_x_strategies/strategies/volatility_breakout/: README.md  registry.yaml  strategy.py  test_volatility_breakout.py
